@@ -127,7 +127,7 @@ public class IngresAdapter extends JdbcAdapter {
         buf.append(quotingStrategy.quotedName(at)).append(' ').append(type);
 
         // append size and precision (if applicable)
-        if (TypesMapping.supportsLength(at.getType())) {
+        if (typeSupportsLength(at.getType())) {
             int len = at.getMaxLength();
             int scale = TypesMapping.isDecimal(at.getType()) ? at.getScale() : -1;
 
