@@ -345,7 +345,8 @@ public class MySQLAdapter extends JdbcAdapter {
         }
     }
 
-    private boolean typeSupportsLength(int type) {
+    @Override
+    public boolean typeSupportsLength(int type) {
     	// As of MySQL 5.6.4 the "TIMESTAMP" and "TIME" types support length, which is the number of decimal places for fractional seconds
     	// http://dev.mysql.com/doc/refman/5.6/en/fractional-seconds.html
     	switch (type) {
@@ -353,7 +354,7 @@ public class MySQLAdapter extends JdbcAdapter {
 	    	case Types.TIME:
 	    		return true;
 	    	default:
-	    		return TypesMapping.supportsLength(type);
+	    		return super.typeSupportsLength(type);
     	}
     }
     
