@@ -73,6 +73,7 @@ CAY-1818 Fix copyright year in the Modeler "about" panel
 CAY-1834 Exception: ToManyList cannot be cast to DataObject 
 CAY-1857 Problem with hotkeys 
 CAY-1859 NullPointerException when importing EOModel 
+CAY-1863 Make determining whether a particular database type supports length adapter-specific not universal
 CAY-1866 Change in General Modeler Preferences reverts old settings to default value
 CAY-1868 Select contention with multiple contexts 
 CAY-1869 ResultIterator from cayenne-client dependency is subclassed from org.apache.cayenne.access.ResultIterator which is present only in cayenne-server dependency 
